# evaluation_functions

./: LICENSE  README.md  pyproject.toml
evaluation_functions/classification/: classification_evaluator.py  confusion_matrix.py  evaluation_index.py
