[tool.poetry]
name = "evaluation_functions"
version = "0.1.0"
description = ""
authors = ["rsato_work <ryosuke.sato.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.6."
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
